# controller/api/v1/admin.go
@@ -1,6 +1,7 @@
 package v1
 
 import (
+	"encoding/json"
 	"errors"
 	"lil-helper-backend/hashids"
 	apimodel "lil-helper-backend/model/apiModel"
@@ -43,73 +44,84 @@ func RegistAdmin(c *gin.Context) { // done
 // @Tags Admin
 // @Summary create mission
 // @Produce application/json
-// @Param data body apiModel.SetMissionParam true "set mission params"
+// @Param data body apiModel.SetMissionParams true "set mission params"
 // @Success 200 {object} handler.Response{data=helpermodel.Mission}
 // @Router /admin/mission [post]
 func CreateMission(c *gin.Context) {
 	app := handler.Gin{C: c}
-	var params apimodel.SetMissionParam
+	var params apimodel.SetMissionParams
 
 	if err := c.BindJSON(&params); err != nil {
 		app.Response(http.StatusBadRequest, e.INVALID_PARAMS, nil)
 		return
 	}
 
-	mission := helpermodel.Mission{
-		Content: params.Content,
-		Picture: params.Picture,
-		// Weight:  []int{1, 2, 3, 4, 5},
-		Score:  10,
-		Active: params.Active,
+	var user *helpermodel.User
+	if user = app.GetUser(); user == nil {
+		return
 	}
-	app.Response(http.StatusOK, e.SUCCESS, mission)
+	userID, err := hashids.DecodeUserUID(user.UID)
+	if err != nil {
+		app.Response(http.StatusBadRequest, e.ERR_INVALID_USER_UID, nil)
+		return
+	}
+
+	// weightstr := apimodel.IntSliceToString(params.Weight)
+	weightjson, _ := json.Marshal(params.Weight)
+	// reverse operation json.Unmarshal(string(weightjson))
+	// var weight []int
+	// err := json.Unmarshal([]byte(string(weightjson)), &weight)
+	// if err != nil {
+	// 	fmt.Println("error on unmarshal")
+	// }
+	// fmt.Println(weight)
+	mission, err := helpermodel.CreateMission(userID, params.Content, params.Picture, string(weightjson), params.Score)
+	if errors.Unwrap(err) != nil {
+		app.Response(http.StatusInternalServerError, e.ERROR, nil)
+	} else if err != nil {
+		app.MsgResponse(http.StatusBadRequest, e.INVALID_PARAMS, err.Error(), nil)
+	} else {
+		app.Response(http.StatusOK, e.SUCCESS, mission.Public())
+	}
 }
 
 // GetMissions ...
 // @Tags Admin
-// @Summary list missions
+// @Summary list missions by date(optional), else list today's missions
 // @Produce application/json
+// @Param datefrom query string false "mission date from"
+// @Param dateto query string false "mission date to"
 // @Success 200 {object} handler.Response{data=apiModel.JsonObjectArray}
 // @Router /admin/missions [get]
 func GetMissions(c *gin.Context) {
 	app := handler.Gin{C: c}
 
-	missions := []helpermodel.Mission{}
-	mission := helpermodel.Mission{}
-	missions = append(missions, mission)
-	missions = append(missions, mission)
-	jsonArray := apimodel.NewJsonObjectArray(missions)
-	app.Response(http.StatusOK, e.SUCCESS, jsonArray)
-}
+	var dateFrom, dateTo string
 
-// GetMissionsByDate ...
-// @Tags Admin
-// @Summary list missions by date
-// @Produce application/json
-// @Params date path string true "mission date"
-// @Success 200 {object} handler.Response{data=apiModel.JsonObjectArray}
-// @Router /admin/missions/{date} [get]
-func GetMissionsByDate(c *gin.Context) {
-	app := handler.Gin{C: c}
+	if dateFromq, ok := c.GetQuery("datefrom"); ok {
+		dateFrom = dateFromq
+	}
+	if dateToq, ok := c.GetQuery("dateto"); ok {
+		dateTo = dateToq
+	}
+	if dateFrom == "" || dateTo == "" {
+		dateFrom = time.Now().String()[0:10]
+		dateTo = time.Now().AddDate(0, 0, 1).String()[0:10]
+	}
 
-	date := c.Param("date")
-
-	layout := "2006-01-02T15:04:05.000Z"
-	date = "2014-11-12T11:45:26.371Z"
-	t, err := time.Parse(layout, date)
-
-	if err != nil {
+	missions, err := helpermodel.GetMissionsByDate(dateFrom, dateTo)
+	if errors.Unwrap(err) != nil {
 		app.Response(http.StatusInternalServerError, e.ERROR, nil)
+	} else if err != nil {
+		app.MsgResponse(http.StatusBadRequest, e.INVALID_PARAMS, err.Error(), nil)
+	} else {
+		var publicMissions []helpermodel.PublicMission
+		for _, m := range missions {
+			publicMissions = append(publicMissions, m.Public())
+		}
+		jsonArray := apimodel.NewJsonObjectArray(publicMissions)
+		app.Response(http.StatusOK, e.SUCCESS, jsonArray)
 	}
-
-	missions := []helpermodel.Mission{}
-	mission := helpermodel.Mission{
-		Date: t,
-	}
-	missions = append(missions, mission)
-	missions = append(missions, mission)
-	jsonArray := apimodel.NewJsonObjectArray(missions)
-	app.Response(http.StatusOK, e.SUCCESS, jsonArray)
 }
 
 // UpdateMission ...
@@ -117,28 +129,35 @@ func GetMissionsByDate(c *gin.Context) {
 // @Summary update mission
 // @Produce application/json
 // @Param uid path string true "mission uid"
-// @Param data body apiModel.SetMissionParam true "set mission params"
+// @Param data body apiModel.SetMissionParams true "set mission params"
 // @Success 200 {object} handler.Response{data=helpermodel.Mission}
 // @Router /admin/missions/{uid} [post]
 func UpdateMission(c *gin.Context) {
 	app := handler.Gin{C: c}
-	missionID := c.Param("uid")
-	var params apimodel.SetMissionParam
+	var params apimodel.SetMissionParams
 
 	if err := c.BindJSON(&params); err != nil {
 		app.Response(http.StatusBadRequest, e.INVALID_PARAMS, nil)
 		return
 	}
 
-	mission := helpermodel.Mission{
-		UID:     missionID,
-		Content: params.Content,
-		Picture: params.Picture,
-		// Weight:  []int{1, 2, 3, 4, 5},
-		Score:  10,
-		Active: params.Active,
+	missionUID := c.Param("uid")
+	missionID, err := hashids.DecodeMissionUID(missionUID)
+	if err != nil {
+		app.Response(http.StatusBadRequest, e.ERR_NO_SUCH_MISSION, nil)
+		return
 	}
-	app.Response(http.StatusOK, e.SUCCESS, mission)
+
+	weightjson, _ := json.Marshal(params.Weight)
+
+	mission, err := helpermodel.UpdateMission(missionID, params.Content, params.Picture, string(weightjson), params.Score, params.Active)
+	if errors.Unwrap(err) != nil {
+		app.Response(http.StatusInternalServerError, e.ERROR, nil)
+	} else if err != nil {
+		app.MsgResponse(http.StatusBadRequest, e.INVALID_PARAMS, err.Error(), nil)
+	} else {
+		app.Response(http.StatusOK, e.SUCCESS, mission.Public())
+	}
 }
 
 // DeleteMission ...
@@ -150,51 +169,99 @@ func UpdateMission(c *gin.Context) {
 // @Router /admin/missions/{uid} [delete]
 func DeleteMission(c *gin.Context) {
 	app := handler.Gin{C: c}
-	missionID := c.Param("uid")
-	app.Response(http.StatusOK, e.SUCCESS, missionID)
+	missionUID := c.Param("uid")
+	missionID, err := hashids.DecodeMissionUID(missionUID)
+	if err != nil {
+		app.Response(http.StatusBadRequest, e.ERR_NO_SUCH_MISSION, nil)
+		return
+	}
+	err = helpermodel.DeleteMission(missionID)
+	if errors.Unwrap(err) != nil {
+		app.Response(http.StatusInternalServerError, e.ERROR, nil)
+	} else if err != nil {
+		app.MsgResponse(http.StatusBadRequest, e.INVALID_PARAMS, err.Error(), nil)
+	} else {
+		app.Response(http.StatusOK, e.SUCCESS, nil)
+	}
 }
 
 // GetScreenshots ...
 // @Tags Admin
 // @Summary list screenshots
 // @Produce application/json
+// @Param datefrom query string false "screenshot date from"
+// @Param dateto query string false "screenshot date to"
+// @Param audit query bool true "if screenshot auditted (default: false)"
 // @Success 200 {object} handler.Response{data=apiModel.JsonObjectArray}
 // @Router /admin/screenshots [get]
 func GetAllScreenshots(c *gin.Context) {
 	app := handler.Gin{C: c}
 
-	var screenshots []helpermodel.Screenshot
-	var screenshot helpermodel.Screenshot
-	screenshots = append(screenshots, screenshot)
-	screenshots = append(screenshots, screenshot)
-	jsonArray := apimodel.NewJsonObjectArray(screenshots)
-	app.Response(http.StatusOK, e.SUCCESS, jsonArray)
+	var dateFrom, dateTo string
+	if dateFromq, ok := c.GetQuery("datefrom"); ok {
+		dateFrom = dateFromq
+	}
+	if dateToq, ok := c.GetQuery("dateto"); ok {
+		dateTo = dateToq
+	}
+	if dateFrom == "" || dateTo == "" {
+		dateFrom = time.Now().String()[0:10]
+		dateTo = time.Now().AddDate(0, 0, 1).String()[0:10]
+	}
+
+	var audit = false
+	if auditstr, ok := c.GetQuery("audit"); ok && auditstr == "true" {
+		audit = true
+	}
+
+	screenshots, err := helpermodel.GetScreenshotsByDate(0, dateFrom, dateTo, audit, true)
+	if errors.Unwrap(err) != nil {
+		app.Response(http.StatusInternalServerError, e.ERROR, nil)
+	} else if err != nil {
+		app.MsgResponse(http.StatusBadRequest, e.INVALID_PARAMS, err.Error(), nil)
+	} else {
+		var publicScreenshots []helpermodel.PublicScreenshot
+		for _, s := range screenshots {
+			publicScreenshots = append(publicScreenshots, s.Public())
+		}
+		jsonArray := apimodel.NewJsonObjectArray(publicScreenshots)
+		app.Response(http.StatusOK, e.SUCCESS, jsonArray)
+	}
 }
 
 // SetScreenshotApprove ...
 // @Tags Admin
 // @Summary audit screenshot
 // @Produce application/json
+// @Param uid path string true "screenshot uid"
 // @Param data body apimodel.AuditScreenshotParams true "audit screenshot params"
 // @Success 200 {object} handler.Response{data=helpermodel.Screenshot}
-// @Router /admin/setscreenshotapprove [post]
+// @Router /admin/screenshots/{uid} [post]
 func SetScreenshotApprove(c *gin.Context) {
 	app := handler.Gin{C: c}
-
 	var params apimodel.AuditScreenshotParams
 	if err := c.BindJSON(&params); err != nil {
 		app.Response(http.StatusBadRequest, e.INVALID_PARAMS, nil)
 		return
 	}
-	screenshot := helpermodel.Screenshot{
-		UserID:    params.UserID,
-		MissionID: params.MissionID,
-		Approve:   params.Approve,
-		Audit:     true,
-		Picture:   "this/is/a/path/of/picture.jpg",
+	screenshotUID := c.Param("uid")
+	screenshotID, err := hashids.DecodeScreenshotUID(screenshotUID)
+	if err != nil {
+		app.Response(http.StatusBadRequest, e.ERR_NO_SUCH_SCREENSHOT, nil)
+		return
 	}
-	app.Response(http.StatusOK, e.SUCCESS, screenshot)
+	screenshot, err := helpermodel.SetScreeshotApprove(screenshotID, params.Approve)
+	if errors.Unwrap(err) != nil {
+		app.Response(http.StatusInternalServerError, e.ERROR, nil)
+		return
+	} else if err != nil {
+		app.MsgResponse(http.StatusBadRequest, e.INVALID_PARAMS, err.Error(), nil)
+		return
+	}
 	//set score
+
+	app.Response(http.StatusOK, e.SUCCESS, screenshot.Public())
+
 }
 
 // GetHelpers ...
